# CIM-Builder

./: .gitignore  LICENSE  README.md  debug.ipynb  pyproject.toml  test.ipynb  test_aggregate_feeder.ipynb  test_single_bus_feeder.ipynb  test_sub1.xml  test_sub2.xml
cimbuilder/feeder_builder/: aggregate_feeder.py  cim_measurement_manager.py  dss_to_cim.py  insert_measurements.py
cimbuilder/object_builder/: __init__.py  analog.py  breaker.py  discrete.py  new_analog.py  new_base_voltage.py  new_breaker.py  new_bus_bar_section.py  new_disconnector.py  new_discrete.py  new_energy_consumer.py  new_house.py  new_one_terminal_obj.py  new_power_electronics_connection.py  new_power_transformer.py  new_switch_area.py  new_two_terminal_obj.py  new_under_frequency_protection_function_block.py  one_terminal_obj.py  power_transformer.py  two_terminal_obj.py  under_frequency_protection_function_block.py  utils.py
cimbuilder/substation_builder/: __init__.py  aggregate_feeder.py  breaker_and_a_half.py  double_bus_single_breaker.py  main_and_transfer.py  ring_bus.py  sectionalized_bus.py  single_bus.py
cimbuilder/utils/: __init__.py  utils.py
tests/: main_and_transfer.ipynb
tests/asset_templates/: power_transformer_69_12.json  voltage_regulator.json
tests/test_models/: p1rhs5.xml
tests/test_output/: breaker_and_half.xml  breaker_and_half_and_feeders.xml  breaker_half.xml  breaker_half_and_feeders.xml  combined_sub.xml  double_bus.xml  double_bus_and_feeders.xml  double_bus_single_breaker.xml  double_bus_single_breaker_and_feeders.xml  main_and_transfer.xml  ring_bus.xml  (+6 more)
(+19 files in other folders)
