[tool.poetry]
name = "cim-builder"
version = "v0.0.1a"
description = "Simplified Dictionaries of CIM data"
authors = ["A. Anderson <19935503+AAndersn@users.noreply.github.com>"]
packages = [
    { include = "cimbuilder" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
cim-graph = { git = "https://github.com/PNNL-CIM-Tools/CIM-Graph.git", branch = "feature/68"}
gridappsd-python = "^2024.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
