[tool.poetry]
name = "cim-builder"
version = "v0.0.1a"
description = "Simplified Dictionaries of CIM data"
authors = ["A. Anderson <19935503+AAndersn@users.noreply.github.com>"]
packages = [
    { include = "cimbuilder" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gridappsd-python = "^2024.6.0"
cim-graph = {version = "^0.1.6a0", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
